NotesDisplay layout issues resolved, conditional rendering applied to account for different views when in Organization Tasks or Merchant Tasks. Successful display of components in relevant views

--- a/src/components/DetailsTaskView/DetailsTaskView.css
+++ b/src/components/DetailsTaskView/DetailsTaskView.css
@@ -1,7 +1,28 @@
-.task-display-container {
-    height: 49vh;
-    max-height: 65vh;
-    overflow-y: auto;
-    border: 1px solid #273a9158;
-    border-radius: 4px;
+/* .task-display-container {
+  height: 49vh;
+  max-height: 65vh;
+  overflow-y: auto;
+  border: 1px solid #273a9158;
+  border-radius: 4px;
+}
+
+.merchant-task-view {
+  height: 40vh;
+  max-height: 65vh;
+  overflow-y: auto;
+  border: 1px solid #273a9158;
+  border-radius: 4px;
+} */
+
+.task-display-container,
+.merchant-task-view {
+  height: 49vh;
+  max-height: 65vh;
+  overflow-y: auto;
+  border: 1px solid #273a9158;
+  border-radius: 4px;
+}
+
+.merchant-task-view {
+  height: 15vh;
 }
